--- a/toolkit-ee/pom.xml
+++ b/toolkit-ee/pom.xml
@@ -27,6 +27,11 @@
         </dependency>
         <dependency>
             <groupId>za.co.spsi</groupId>
+            <artifactId>mdms-uaa-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>za.co.spsi</groupId>
             <artifactId>toolkit</artifactId>
             <version>${project.version}</version>
         </dependency>
