PEC-267: Created Working Branch - added pec-dev and pec-tst configs - values to be verified by OPS prior to final merge into develop and master branches.

--- a/MDMS/SourceCode/Java/mdms-server/src/main/resources/server/env/pec-tst/conf.properties
+++ b/MDMS/SourceCode/Java/mdms-server/src/main/resources/server/env/pec-tst/conf.properties
@@ -25,7 +25,7 @@ utility.meter_reading_sync.timeout_days=2
 utility.meter_reading_sync.tmz_offset=120
 utility.meter_reading_sync.auto_push=true
 
-global.broker.env=UPG
+global.broker.env=TST
 
 elster.processing.enabled=true
 
