--- a/MDMS/SourceCode/Java/mdms-web/src/main/resources/env/pec-dev/conf.properties
+++ b/MDMS/SourceCode/Java/mdms-web/src/main/resources/env/pec-dev/conf.properties
@@ -8,8 +8,8 @@ parent_agency=1
 services_agency=1000001
 parent_locales=en
 
-oauth.realm=/spsi/ice/dev
-oauth.url=http://dev.spsi.co.za/ICEAUTH
+oauth.realm=/pec/ice/dev
+oauth.url=http://icetst.pecgroup.local/ICEAUTH
 
 #oauth.realm=/pec/ice/upg
 #oauth.url=http://192.1.0.170:8090/ICEAUTH
@@ -23,7 +23,7 @@ db.upgrade.clear_user=false
 db.upgrade.update_rights=true
 db.upgrade.devmode=false
 
-ice_lookup_url=http://dev.spsi.co.za/MLCS
+ice_lookup_url=http://icedev.pecgroup.local/MLCS
 mlcsCacheEnabled=true
 
 grid.row_limit=1001
@@ -39,14 +39,14 @@ db.maintenance.incremental.factor=10
 
 # Ice Utility Properties
 iceProvinceCd=2010013
-iceUser=ICE_MDMS_UAT
+iceUser=ICE_MDMS_DEV
 icePassword=Password01
 iceCountryCd=ZW
 iceClientId=1000005
 iceRoleId=2010029
 iceOrgId=0
 iceWarehouseId=0
-iceBaseUrl=http://ice-util01.spsi.co.za:8088
+iceBaseUrl=http://icedev.pecgroup.local
 iceCityCd=2010983
 billingEnabled=true
 
