--- a/MDMS/SourceCode/Java/mdms-web/src/main/resources/env/pec-tst/conf.properties
+++ b/MDMS/SourceCode/Java/mdms-web/src/main/resources/env/pec-tst/conf.properties
@@ -8,8 +8,8 @@ parent_agency=1
 services_agency=1000001
 parent_locales=en
 
-oauth.realm=/pec/ice/upg
-oauth.url=https://iceupg.pecutilities.co.za/ICEAUTH/
+oauth.realm=/pec/ice/tst
+oauth.url=https://icetst.pecgroup.local/ICEAUTH/
 
 db.upgrade.connection_file.path=MDMSDEV.properties
 
@@ -20,7 +20,7 @@ db.upgrade.clear_user=false
 db.upgrade.update_rights=true
 db.upgrade.devmode=false
 
-ice_lookup_url=http://iceupg-portal01:8080/MLCS
+ice_lookup_url=http://icetst.pecgroup.local/MLCS
 mlcsCacheEnabled=true
 
 grid.row_limit=1001
@@ -36,19 +36,19 @@ db.maintenance.incremental.factor=10
 
 # Ice Utility Properties
 iceProvinceCd=2010013
-iceUser=ICE_MDMS_UPG
+iceUser=ICE_MDMS_TST
 icePassword=Password01
 iceCountryCd=ZW
 iceClientId=1000005
 iceRoleId=2010029
 iceOrgId=0
 iceWarehouseId=0
-iceBaseUrl=http://iceupg-util01:8080
+iceBaseUrl=http://icetst.pecgroup.local
 iceCityCd=2010983
 billingEnabled=true
 
 db.frw.engineering.enabled=true
 db.frw.engineering.liquibase.enabled=true
-db.frw.engineering.r_user=icemdmsrupg
-db.frw.engineering.o_user=icemdmsoupg
+db.frw.engineering.r_user=icemdmsrtst
+db.frw.engineering.o_user=icemdmsotst
 
